--- a/stack.yml
+++ b/stack.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: .docker/Dockerfile
-    image: "${REGISTRY}/resume"
+    image: ehemmerlin/resume
     ports:
       - 8080:80
     volumes:
