--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: .docker/Dockerfile
-    image: web
+    image: ehemmerlin/resume
     ports:
       - 8080:80
     volumes:
